--- a/images assignment.html
+++ b/images assignment.html
@@ -7,6 +7,8 @@
     <title>Images</title>
 </head>
 <body>
+    <h1><center>18/47cs/00791</center></h1>
+    <hr>
     <p><img src="my pic.jpg" alt="A Picture of Me" height="200px" width="100px">My name is Ayomide Ishola. I am a student of Kwasu State University studying Computer Science. I am dark in complextion. 
         I think i am 5'8 tall(not sure). I am from Kwara State but i was born in Lagos State. I grew up in Lagos but iam currently living in Ogun State.
         I have three siblings a boy and two girls. <br>I love being in the CSC 207 class because i learn a lot of things and the lecturer is amazing in what she does.
