--- a/table assignment.html
+++ b/table assignment.html
@@ -9,6 +9,8 @@
 </head>
 
 <body>
+    <h1><center>18/47cs/00791</center></h1>
+    <hr>
     <table>
         <caption>200 Level Harmattan Courses</caption>
         <tr>
