--- a/images assignment.html
+++ b/images assignment.html
@@ -13,7 +13,7 @@
         I think i am 5'8 tall(not sure). I am from Kwara State but i was born in Lagos State. I grew up in Lagos but iam currently living in Ogun State.
         I have three siblings a boy and two girls. <br>I love being in the CSC 207 class because i learn a lot of things and the lecturer is amazing in what she does.
         To see how i look like, click the link below.</p>
-    <a href="Images assignment2.html">About Me</a><br>
+    <a href="images assignment2.html">About Me</a><br>
     <a href="index.html">Go back to the Homepage</a>
 </body>
 </html>
