--- a/images assignment.html
+++ b/images assignment.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Images</title>
+    <title>Images Assignment</title>
 </head>
 <body>
     <h1><center>18/47cs/00791</center></h1>
