--- a/images assignment.html
+++ b/images assignment.html
@@ -28,7 +28,7 @@
         I have three siblings a boy and two girls. <br>I love being in the CSC 207 class because i learn a lot of things
         and the lecturer is amazing in what she does.
         To see how i look like, click the link below.</p>
-    <a href="Images assignment2.html">About Me</a><br>
+    <a href="images assignment2.html">About Me</a><br>
 </body>
 
 </html>
